tests/rosetta/transpiler/rb/casting-out-nines.error
run: exit status 1
/workspace/mochi/tests/rosetta/transpiler/rb/casting-out-nines.rb: --> /workspace/mochi/tests/rosetta/transpiler/rb/casting-out-nines.rb
syntax error, unexpected `begin'
> 51  def subset(base, begin, end)
> 67  end
/workspace/mochi/tests/rosetta/transpiler/rb/casting-out-nines.rb:51: syntax error, unexpected `begin' (SyntaxError)
def subset(base, begin, end)
                 ^~~~~

